@@ -1317,7 +1317,7 @@ if test "x$java" = "xyes"; then
 fi
 
 AM_CONDITIONAL(JABBER, test "x$found_jabber" = "xyes")
-AM_CONDITIONAL(WITH_ODBC, test "x$have_unixodbc" == "xyes")
+AM_CONDITIONAL(WITH_ODBC, test "x$have_unixodbc" = "xyes")
 
 found_ldap="no"
 dnl Check for libLDAP [by default - skip]
