@@ -3,6 +3,7 @@ Changes for 2.1.5
 New features:
 
 Bug fixes:
+...GI..PS. [ZBX-6955] fixed library order in linking, fixed compiler warnings, improved performance of zbx_snprintf_alloc() function (Andris)
 ........S. [ZBX-6981] fixed SQL error during lld trigger creation (wiper)
 A......... [ZBX-6866] fixed beeing able to add graph items from other hosts for templated graphs (Ivo)
 ..F....... [ZBX-6854] fixed javascript error on pages with checkboxes, but without main checkbox (Vitalij)
